Bookmaks filter should not return any count